--- a/cv.HTML
+++ b/cv.HTML
@@ -9,8 +9,9 @@
       <nav>
         <ul>
           <li><a href="./index.html">Home</a></li>
-          <li><a href="swnw.html">SwNwBasis:1</a></li>
-          <li><a href="cv.html">CV</a></li>
+          <li><a href="./swnw.html">SwNwBasis:1</a></li>
+          <li><a href="./subjects/swnwb2.html">SwNwBasis:2</a></li>
+          <li><a href="./cv.html">CV</a></li>
         </ul>
       </nav>
 
@@ -24,9 +25,8 @@
       <br>特技は臭いを嗅ぎ分けることで、始めようと思っている趣味はお寺・神社巡りです。
       <br>一人暮らしを始めて、甘いものを求めてかチョコをよく食べるようになりました。
       <br>よろしくお願いします。
-    </p>
+    </p><iframe width="560" height="315" src="https://www.youtube.com/embed/h4jP4dQE_SY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
-
     <footer>
     <small>クロステックデザインコース</small>
   </footer>
