--- a/index.HTML
+++ b/index.HTML
@@ -11,6 +11,7 @@
         <ul>
           <li><a href="#">Home</a><li>
           <li><a href="./swnw.html">SwNwBasis:1</a><li>
+          <li><a href="./subjects/swnwb2.html">SwNwBasis:2</a></li>
           <li><a href="./cv.html">CV</a><li>
         </ul>
       </nav>
