--- a/swnw.HTML
+++ b/swnw.HTML
@@ -10,7 +10,8 @@
     <ul>
       <li><a href="./index.html">Home</a></li>
       <li><a href="./swnw.html">SwNwBasis:1</a></li>
-      <li><a href="cv.html">CV</a></li>
+      <li><a href="./subjects/swnwb2.html">SwNwBasis:2</li>
+      <li><a href="./cv.html">CV</a></li>
     </ul>
   </nav>
     <main>
