--- a/swnw.html
+++ b/swnw.html
@@ -20,5 +20,35 @@
       <br>元の長方形の写真を正方形にして
       <br>写真そのものの明度が好きだったので明度は変えず
       <br>文字を打ちました
+      <br>
+      <br>
+      <br>
     </p>
+    <h2>履修科目</h2>
+    <p>前期　
+      <br>創学
+      <br>　英会話Ⅰ
+      <br>　ことばとコミュニケーション
+      <br>　日本文化演習（和太鼓）
+      <br>　クリエイティブWS
+      <br>
+      <br>コース
+      <br>　メディア概論Ⅰ
+      <br>　スタートアップ概論Ⅰ
+      <br>
+
+
+
+
+    　　</p>
+    <p>後期
+      <br>創学
+      <br>　創造的工房論
+      <br>美術史
+      <br>
+
+
+    </p>
+
+
     </main>
