--- a/swnw.html
+++ b/swnw.html
@@ -31,21 +31,28 @@
       <br>　ことばとコミュニケーション
       <br>　日本文化演習（和太鼓）
       <br>　クリエイティブWS
-      <br>
       <br>コース
       <br>　メディア概論Ⅰ
       <br>　スタートアップ概論Ⅰ
-      <br>
+      <br>前期集中
+      <br>　ソフトウェアネットワーク演習Ⅰ
+      <br>　デザイン技法Ⅰ
+      <br>　素材・材料学Ⅰ
+      <br>　プレゼンテーション演習Ⅰ
+      <br>夏期集中
+      <br>クリエイティブWS
 
-
-
-
-    　　</p>
+    </p>
     <p>後期
       <br>創学
       <br>　創造的工房論
       <br>美術史
       <br>
+      <br>体育実技Ⅰ
+      <br>教師論
+      <br>コース
+      <br>スタートアップ概論Ⅱ
+      
 
 
     </p>
