--- a/swnw.html
+++ b/swnw.html
@@ -25,35 +25,18 @@
       <br>
     </p>
     <h2>履修科目</h2>
-    <p>前期　
-      <br>創学
-      <br>　英会話Ⅰ
-      <br>　ことばとコミュニケーション
-      <br>　日本文化演習（和太鼓）
-      <br>　クリエイティブWS
-      <br>コース
-      <br>　メディア概論Ⅰ
-      <br>　スタートアップ概論Ⅰ
-      <br>前期集中
-      <br>　ソフトウェアネットワーク演習Ⅰ
-      <br>　デザイン技法Ⅰ
-      <br>　素材・材料学Ⅰ
-      <br>　プレゼンテーション演習Ⅰ
-      <br>夏期集中
-      <br>クリエイティブWS
-
-    </p>
-    <p>後期
-      <br>創学
-      <br>　創造的工房論
-      <br>美術史
-      <br>
-      <br>体育実技Ⅰ
-      <br>教師論
-      <br>コース
-      <br>スタートアップ概論Ⅱ
-      
-
+    <p>前期　                                     後期
+      <br>創学       英会話Ⅰ                              創造的工房論
+      <br>　         ことばとコミュニケーション　　　　　　　　　美術史
+      <br>　         日本文化演習（和太鼓）　　　　　　　　　　　体育実技Ⅰ
+      <br>　         クリエイティブWS　　　　　　　　　　　　　　教師論
+      <br>コース      メディア概論Ⅰ　　　　　　　　　　　　　　　スタートアップ概論Ⅱ
+      <br>　         スタートアップ概論Ⅰ
+      <br>前期集中    ソフトウェアネットワーク演習Ⅰ　　　　　　　デザイン技法Ⅱ
+      <br>　         デザイン技法Ⅰ　　　　　　　　　　　　　　　クロステックデザイン演習Ⅲ
+      <br>　         素材・材料学Ⅰ　　　　　　　　　　　　　　　ソフトウェアネットワーク演習Ⅱ
+      <br>　         プレゼンテーション演習Ⅰ　　　　　　　　　　デザイン基礎Ⅱ
+      <br>夏期集中    クリエイティブWS　　　　　　　　　　　　　プレゼンテーション演習Ⅱ
 
     </p>
 
