--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>shiraSP2index</title>
+    <link rel="stylesheet" href="./assets/css/common.css">
+    <link rel="stylesheet" href="./assets/css/custom.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+
   </head>
   <body>
     <header>
@@ -15,22 +18,12 @@
           <li><a href="./cv.html">CV</a><li>
         </ul>
       </nav>
-
     </header>
+
     <main>
-      <h1>
-      <p><font color=yellow >My study</p></font></p>
+      <h1>My study</h1>
       <img src="./assets/images/IMG_0710.gif" alt="">
-      <h2>履修科目</h2>
-      <h3>前期</h3>
-      <ol>
-        <li>ソフトネットワーク演習１</li>
-      </ol>
-      <h4>後期</h4>
-      <ol>
-        <li>ソフトネットワーク演習２</li>
-        <li>クロステックデザイン演習３</li>
-      </ol>
+
       <h2></h2><a href="./cv.html">自己紹介</a>
     </main>
 
