--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -5,12 +5,13 @@
     <title>ソフトウェアネットワーク演習２</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="stylesheet" href="../assets/css/custom.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
   </head>
 
-  <body class="subject_page">
-    <div id="wrapper">
+  <body>
+    <div>
       <header>
-        <nav id="main_nav">
+        <nav>
           <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="../swnw.html">SwNwBasis:1</a></li>
