--- a/swnw.html
+++ b/swnw.html
@@ -2,16 +2,24 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./assets/css/common.css">
+    <link rel="stylesheet" href="./assets/css/custom.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title></title>
   </head>
 　<body>
+
   </header>
   <nav>
     <ul>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./swnw.html">SwNwBasis:1</a></li>
-      <li><a href="./subjects/swnwb2.html">SwNwBasis:2</li>
-      <li><a href="./cv.html">CV</a></li>
+
+    </ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./swnw.html">SwNwBasis:1</a></li>
+        <li><a href="./subjects/swnwb2.html">SwNwBasis:2</li>
+        <li><a href="./cv.html">CV</a></li>
+
+</div>
     </ul>
   </nav>
     <main>
@@ -25,20 +33,21 @@
       <br>
     </p>
     <h2>履修科目</h2>
-    <p>前期　                                                  後期
-      <br>創学            英会話Ⅰ                              創造的工房論
-      <br>　              ことばとコミュニケーション　　　　　　　　　美術史
-      <br>　              日本文化演習（和太鼓）　　　　　　　　　　　体育実技Ⅰ
-      <br>　              クリエイティブWS　　　　　　　　　　　　　　教師論
-      <br>コース           メディア概論Ⅰ　　　　　　　　　　　　　　　スタートアップ概論Ⅱ
-      <br>　              スタートアップ概論Ⅰ
-      <br>前期集中          ソフトウェアネットワーク演習Ⅰ　　　　　　　デザイン技法Ⅱ
-      <br>　              デザイン技法Ⅰ　　　　　　　　　　　　　　　クロステックデザイン演習Ⅲ
-      <br>　              素材・材料学Ⅰ　　　　　　　　　　　　　　　ソフトウェアネットワーク演習Ⅱ
-      <br>　              プレゼンテーション演習Ⅰ　　　　　　　　　　デザイン基礎Ⅱ
-      <br>夏期集中          クリエイティブWS　　　　　　　　　　　　　プレゼンテーション演習Ⅱ
+    <pre>
+前期　                                           後期
+創学            英会話Ⅰ                                  創造的工房論
+　              ことばとコミュニケーション　　　　　　　　　   美術史
+　              日本文化演習（和太鼓）　　　　　　　　　　　   体育実技Ⅰ
+　              クリエイティブWS　　　　　　　　　　　　　　   教師論
+コース           メディア概論Ⅰ　　　　　　　　　　　　　　　    スタートアップ概論Ⅱ
+　              スタートアップ概論Ⅰ
+前期集中         ソフトウェアネットワーク演習Ⅰ　　　　　　　     デザイン技法Ⅱ
+　              デザイン技法Ⅰ　　　　　　　　　　　　　　　     クロステックデザイン演習　
+                素材・材料学Ⅰ　　　　　　　　　　　　　　　     ソフトウェアネットワーク演習Ⅱ
+　              プレゼンテーション演習Ⅰ　　　　　　　　　　     デザイン基礎Ⅱ
+夏期集中         クリエイティブWS　　　　　　　　　　　　　      プレゼンテーション演習Ⅱ
 
-    </p>
 
+</pre>
 
     </main>
