--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
     </header>
 
     <main>
+      <div>
+
       <h1>My study</h1>
       <img src="./assets/images/IMG_0710.gif" alt="">
+      <div><p id="animation">自由とは己のルールで生きること</p>
+     </div>
 
       <h2></h2><a href="./cv.html">自己紹介</a>
     </main>
