--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <main>
       <div>
 
-      <h1>My study</h1>
-      <img src="./assets/images/IMG_0710.gif" alt="">
+      <h1>portfolio</h1>
+      <img src="./assets/images/hasuburero.gif" alt="">
       <div><p id="animation">自由とは己のルールで生きること</p>
      </div>
 
