--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -23,22 +23,35 @@
       </header>
 
       <main>
-        <h1>ソフトウェアネットワーク演習２</h1>
+        <h1>授業課題</h1>
         <div class="session">
-          <h2>session:1</h2>
-          <h3>課題：１</h3>
-          <p>熱して</p>
+          <h2>photoshop</h2>
+            <img src="./assets/images/かに.psg" alt="">
+          <h3></h3>
 
         </div>
         <div class="session">
+          <h2>ソフトウェアネットワーク</h2>
+          <h2>session:1</h2>
+          <h3>課題：フィジカルコンピューティング</h3>
+          <p>micro:bit・Arduino</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/--zFa2toVRk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/VoAoDiU69k8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="session">
           <h2>session:2</h2>
-          <h3>課題：１</h3>
-          <p>焦げたら</p>
+          <h3>課題：初めてのコーディング</h3>
+          <p>scratch・p5js</p>
 　　　　　</div>
           <div class="session">
             <h2>session:3</h2>
-            <h3>課題：１</h3>
-            <p>まずくなってしまうから</p>
+            <h3>課題：section1・2を組み合わせる</h3>
+            <p>micro:bit × scratch</p>
+          </div>
+          <div class="session">
+            <h2>クロステックデザイン演習</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WDY7f0s5C70" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <img src="./assets/images/gia.gif" alt="">
 
           </div>
 　　　　　　 <hr>
