--- a/swnw.html
+++ b/swnw.html
@@ -24,30 +24,24 @@
   </nav>
     <main>
     <h1>授業の課題</h1>
-    <p>photoshop
-      <br>元の長方形の写真を正方形にして
-      <br>写真そのものの明度が好きだったので明度は変えず
-      <br>文字を打ちました
-      <br>
-      <br>
-      <br>
-    </p>
+
     <h2>履修科目</h2>
-    <pre>
-前期　                                           後期
-創学            英会話Ⅰ                                  創造的工房論
-　              ことばとコミュニケーション　　　　　　　　　   美術史
-　              日本文化演習（和太鼓）　　　　　　　　　　　   体育実技Ⅰ
-　              クリエイティブWS　　　　　　　　　　　　　　   教師論
-コース           メディア概論Ⅰ　　　　　　　　　　　　　　　    スタートアップ概論Ⅱ
-　              スタートアップ概論Ⅰ
-前期集中         ソフトウェアネットワーク演習Ⅰ　　　　　　　     デザイン技法Ⅱ
-　              デザイン技法Ⅰ　　　　　　　　　　　　　　　     クロステックデザイン演習　
-                素材・材料学Ⅰ　　　　　　　　　　　　　　　     ソフトウェアネットワーク演習Ⅱ
-　              プレゼンテーション演習Ⅰ　　　　　　　　　　     デザイン基礎Ⅱ
-夏期集中         クリエイティブWS　　　　　　　　　　　　　      プレゼンテーション演習Ⅱ
-
-
+    　 <br>前期　
+       <br>　　　　　
+       <br>スタートアップ概論Ⅰ
+       <br><li><a href="./sss.html">ソフトウェアネットワーク演習I</a></li>
+       <br>デザイン技法Ⅰ
+　　　　<br>素材・材料学Ⅰ　
+　　　　<br>プレゼンテーション演習Ⅰ　
+      <br>　　　　　　　　　　　
+       <br>後期
+       <br>　
+       <br>スタートアップ概論Ⅱ
+　　　　<br>デザイン技法Ⅱ
+       <br>クロステックデザイン演習
+　　　　 <br>デザイン基礎Ⅱ
+　　　　　<br><li><a href="./mmm.html">ソフトウェアネットワーク演習Ⅱ</a></li>
+　　　　　<br>プレゼンテーション演習Ⅱ
 </pre>
 
     </main>
