--- a/cv.html
+++ b/cv.html
@@ -21,13 +21,19 @@
     </header>
     <main>
     <h1>自己紹介</h1>
-    <p>濱田優希です。
+    <p>濱田優希
       <br>京都造形芸術大学　情報デザイン学科　クロステックデザインコース
-      <br>生年月日は2000年5月14日で2000年の母の日に生まれました。
-      <br>血液型はo型、出身地は愛媛の田舎娘です。
-      <br>特技は臭いを嗅ぎ分けることで、始めようと思っている趣味はお寺・神社巡りです。
-      <br>一人暮らしを始めて、甘いものを求めてかチョコをよく食べるようになりました。
-      <br>よろしくお願いします。
+      <br>生年月日  2000年5月14日
+　    <br>出身地    愛媛県
+      <br>経験あること　そろばん　
+      <br>　　　　　　　習字
+      <br>　　　　　　　ダンス
+      <br>　　　　　　　バレエ
+      <br>　　　　　　　新体操
+      <br>　　　　　　　合気道
+      <br>　　　　　　　パーカッション
+      <br>　　　　　　　華道
+      <br>
     </p><iframe width="560" height="315" src="https://www.youtube.com/embed/h4jP4dQE_SY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
     <footer>
