--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -26,14 +26,14 @@
         <h1>授業課題</h1>
         <div class="session">
           <h2>photoshop</h2>
-            <img src="./assets/images/かに.psg" alt="">
+            <img src="../assets/images/kani.gif" alt="">
           <h3></h3>
 
         </div>
         <div class="session">
           <h2>ソフトウェアネットワーク</h2>
           <h2>session:1</h2>
-          <h3>課題：フィジカルコンピューティング</h3>
+          <h3>課題：フィジカルコンピューティング</h3>WDY7f0s5C70
           <p>micro:bit・Arduino</p>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/--zFa2toVRk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/VoAoDiU69k8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -50,8 +50,8 @@
           </div>
           <div class="session">
             <h2>クロステックデザイン演習</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/WDY7f0s5C70" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <img src="./assets/images/gia.gif" alt="">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/--zFa2toVRk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <img src="../assets/images/gia.gif" alt="">
 
           </div>
 　　　　　　 <hr>
