--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -26,7 +26,7 @@
         <h1>授業課題</h1>
         <div class="session">
           <h2>photoshop</h2>
-            <img src="../assets/images/kani.gif" alt="">
+            <img src="../assets/images/kani.pdf" alt="">
           <h3></h3>
 
         </div>
