--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -26,7 +26,8 @@
         <h1>授業課題</h1>
         <div class="session">
           <h2>photoshop</h2>
-            <img src="../assets/images/kani.pdf" alt="">
+            <img src="../assets/images/kani.gif" alt="">
+            <br>かにに目線を行かせたかったため、スポンジツールで水がかかってない部分から上の方へ彩度を落としました。
           <h3></h3>
 
         </div>
