--- a/swnw.html
+++ b/swnw.html
@@ -40,7 +40,7 @@
 　　　　<br>デザイン技法Ⅱ
        <br>クロステックデザイン演習
 　　　　 <br>デザイン基礎Ⅱ
-　　　　　<br><li><a href="./mmm.html">ソフトウェアネットワーク演習Ⅱ</a></li>
+　　　　　<br><a href="./subjects/mmm.html">ソフトウェアネットワーク演習Ⅱ</a>
 　　　　　<br>プレゼンテーション演習Ⅱ
 </pre>
 
