--- a/swnw.html
+++ b/swnw.html
@@ -14,10 +14,10 @@
     <ul>
 
     </ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./swnw.html">SwNwBasis:1</a></li>
-        <li><a href="./subjects/swnwb2.html">SwNwBasis:2</li>
-        <li><a href="./cv.html">CV</a></li>
+        <li><a href="./home.html">Home</a></li>
+        <li><a href="./planning.html">Planning</a></li>
+        <li><a href="./subjects/desing.html">Desing</li>
+        <li><a href="./other.html">Other</a></li>
 
 </div>
     </ul>
